<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">eDocent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to eDocent!</string>
    <string name="state_name">Please Select a State:</string>
    <string name="museum_prompt">Please Select a Museum:</string>
    <string name="submitbutton">Look For A Museum!</string>
    <string name="spinner_prompt">States</string>

    <string-array name="state_list">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>DC</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
        <item>AS</item>
        <item>GU</item>
        <item>MP</item>
        <item>PR</item>
        <item>VI</item>
        <item>UM</item>
    </string-array>

    <string name="title_activity_edocent_splash">EDocentSplash</string>

</resources>
