<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/ScrollView01"
  android:layout_width="fill_parent"
  android:layout_height ="fill_parent"
  android:background ="@drawable/gogh_background"
  android:scrollbars="vertical">
  

    
  	<LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical" 
        android:layout_height="fill_parent"
        android:gravity="center"
        android:paddingTop="50dp"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        android:layout_margin="10dp"
        android:weightSum="50">
 <!--  Form Controls -->
 
 <TextView
    android:id="@+id/TextViewTitle0"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/welcome"
    android:gravity="center_horizontal"
    android:layout_margin="10dp"
    android:textSize="24pt"
    android:paddingBottom ="35dp"
    android:textColor="#ffffff"/>
   
 <TextView
    android:id="@+id/TextViewTitle1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/state_name"
    android:gravity="center_horizontal"
    android:layout_margin="10dp"
    android:textSize="9pt"
    android:textColor="#ffffff"/>


 <Spinner
        android:id="@+id/state_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_prompt"/>
  <Spinner
        android:id="@+id/city_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_prompt"/>
  
   <Spinner
        android:id="@+id/museum_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:prompt="@string/spinner_prompt"/>
 
 
 <TextView
    android:id="@+id/TextViewTitle2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/museum_prompt"
    android:layout_margin="10dp"
    android:textSize="9pt"
    android:textColor="#ffffff"/>


<Button
    android:id="@+id/ButtonSendFeedback"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:text="@string/submitbutton"
    android:onClick="onClick"
    android:layout_margin="40dp"
    android:layout_width="fill_parent"
    android:textColor="#ffffff" />

    
  	</LinearLayout>
  
</ScrollView>